tests/invalid/var_declared_late.c
int main() {
    a = 1 + 2;
    int a;
    return a;
}
// ERROR: Line 2, Error 3001